<resources>
    <string name="app_name">Grad-Project</string>
    <string name="project_name">Apartopolis</string>
    <string name="site_name">Site Adı</string>
    <string name="password">Şifre</string>
    <string name="log_in">GİRİŞ</string>
    <string name="admin">Yönetici</string>
    <string name="resident">Sakin</string>
    <string name="log_in_click">logInClick</string>
    <string name="you_don_t_have_an_account">Hesabın yok mu?</string>
    <string name="sign_up_here">Buradan kayıt ol</string>
    <string name="sign_up_here_click">SignUpHereClick</string>
    <string name="new_account">Yeni Hesap</string>
    <string name="full_name">Ad-Soyad</string>
    <string name="phone_number">Cep Telefonu</string>
    <string name="next">İLERİ</string>
    <string name="next_click">nextClick</string>
    <string name="not_the_first_time_here">Buraya ilk defa gelmiyor musun?</string>
    <string name="log_in.">Giriş.</string>
    <string name="log_in_Clickable">logInClickable</string>
    <string name="site_information">Site Bilgisi</string>
    <string name="city">Şehir</string>
    <string name="county">İlçe</string>
    <string name="block_no">Blok No</string>
    <string name="flat_count">Daire Sayısı</string>
    <string name="block_count">Blok Sayısı</string>
    <string name="flat_no">Daire No</string>
    <string name="sign_up">Kayıt ol</string>
    <string name="ap">AP</string>
    <string name="account_name">Hesap Adı</string>
    <string name="collection_of_debt">Borç Tahsilatı</string>
    <string name="incomes">Gelirler</string>
    <string name="expenditures">Giderler</string>
    <string name="requests">Talepler</string>
    <string name="home">Ana Sayfa</string>
    <string name="announcements">Duyurular</string>
    <string name="residents">Sakinler</string>
    <string name="add_new_announcement">Yeni Duyuru Ekle</string>
    <string name="todo">TODO</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Başlık</string>
    <string name="content">İçerik</string>
    <string name="share">paylaş</string>
    <string name="take_photo">Fotoğraf çek</string>
    <string name="account">HESAP</string>
    <string name="setting">Ayarlar</string>
    <string name="log_out">Oturumu kapat</string>
    <string name="notification">Bildirimler</string>
    <string name="voting">Oylama</string>
    <string name="services">Servisler</string>
    <string name="meeting">Toplantı</string>
    <string name="pending_approval">Onay bekleyenler</string>
    <string name="open_nav_drawer">nav drawer aç</string>
    <string name="close_nav_drawer">nav drawer kapat</string>
    <string name="başlık">Başlık</string>
    <string name="içerik">İçerik</string>
    <string name="account_type">Hesap Tipi</string>
    <string name="x_blok">X-Blok</string>
    <string name="no_01">No: 01</string>
    <string name="buradan_ara">Buradan Ara</string>
    <string name="herkes">Herkes</string>
    <string name="tutar">Tutar</string>
    <string name="ekle">Ekle</string>
    <string name="borç_ekle">BORÇ EKLE</string>
    <string name="tl">TL</string>
    <string name="iptal">iptal</string>
    <string name="mesaj_gönder">MESAJ GÖNDER</string>
    <string name="gönder">Gönder</string>
    <string name="mesaj_g_nder">Gönder</string>
    <string name="sil">SİL</string>
    <string name="bilgi">BİLGİ</string>
    <string name="duyuru_bilgisi">Duyuru Bilgisi</string>
    <string name="gider_ekle">gider ekle</string>
    <string name="tarih">Tarih</string>
    <string name="fatura_ekle">Fatura ekle</string>
    <string name="gider_tipi">Gider Tipi</string>
    <string name="Gider_Ekle">Gider Ekle</string>
    <string name="borç_sil">BORÇ SİL</string>
    <string name="talep_oluştur">Talep Oluştur</string>
    <string name="borc_odeme">Borç ödeme</string>
    <string name="oylama">Oylama</string>
    <string name="borcum">Borcum</string>
    <string name="taleplerim">Taleplerim</string>
    <string name="fab_add_request">fab_add_request</string>
    <string name="konu">Konu</string>
    <string name="oneri">Öneri</string>
    <string name="sikayet">Şikayet</string>
    <string name="turu">Türü</string>
    <string name="talep_bilgisi">Talep Bilgisi</string>
    <string name="gider_baslıgı">Gider Başlığı</string>
    <string name="borc_sıl">BORÇ SİL</string>
    <string name="silme_nedeni">Silme nedeni</string>
    <string name="gelen_mesajlar">Gelen Mesajlar</string>
    <string name="site_giderleri">Site giderleri</string>
    <string name="oylama_sonuclar">Oylama Sonuçları</string>
    <string name="bildirimleri_temizle">Bildirimleri temizle</string>
    <string name="mesajlar_sil">Mesajları sil</string>
    <string name="aç">Aç</string>
    <string name="kapat">Kapat</string>
    <string name="yönetici">Yönetici</string>
    <string name="sakin">Sakin</string>
    <string name="add_voting">Oylama Ekle</string>
    <string name="surec">Süreç</string>
    <string name="gun">gün</string>
    <string name="baslik_ekle">Başlık ekle</string>
    <string name="Icerik_ekle">İçerik ekle</string>
    <string name="devam_edenler">Devam edenler</string>
    <string name="bitenler">Bitenler</string>
    <string name="yes">Evet</string>
    <string name="_66">%66</string>
    <string name="test">test</string>
    <string name="boşluklarıDoldur">Lütfen boşlukları doldurunuz!</string>
    <string name="tamam">Tamam</string>
    <string name="required">Gerekli*</string>
    <string name="yanlışAktivasyonKodu">Aktivasyon kodunu doğru giriniz!</string>
    <string name="geçersizEmailAdresi">Geçersiz email adresi!</string>
    <string name="siteBilgisiYazdırılamadı">Site bilgisi veritabanına yazdırılamadı!</string>
    <string name="kullanıcıVerisiYazdırılamadı">Kullanıcı bilgisi veritabanına yazdırılamadı!</string>
    <string name="borçSilmeİptalEdildi">Borç silme işlemi iptal edildi!</string>
    <string name="borçEklemeİptalEdildi">Borç ekleme işlemi iptal edildi!</string>
    <string name="borçSilmeBaşarılı">Borç silme işlemi başarıyla gerçekleşti!</string>
    <string name="borçSilmeBaşarısız">Borç silme işlemi gerçekleştirilemedi!</string>
    <string name="borçEklemeBaşarılı">Borç ekleme işlemi başarıyla gerçekleşti!</string>
    <string name="borçEklemeBaşarısız">Borç ekleme işlemi gerçekleştirilemedi!</string>
    <string name="odeme_bilgileri">Ödeme Bilgileri</string>
    <string name="kart_sahibinin_ad">Kart sahibinin adı</string>
    <string name="kart_numaras">Kart numarası</string>
    <string name="aa_yy">AA/YY</string>
    <string name="cvc">CVC</string>
    <string name="terms"><b>Şartları ve Koşulları</b> okudum,kabul ediyorum.</string>
    <string name="odeme_yap">Ödeme yap</string>
    <string name="öneri">Öneri</string>
    <string name="talepGöster">Talep Bilgisi</string>
    <string name="bildirimler">Bildirimler</string>
    <string name="çizgi">-</string>
    <string name="sure">Süre</string>
    <string name="belge_ekle">Belge ekle</string>
    <string name="onayla">Onayla</string>
    <string name="reddet">Reddet</string>
    <string name="durations">Süre:</string>
    <string name="_16_s">16(s)</string>
    <string name="site_management_app">Site yönetim uygulaması</string>
    <string name="site_Giderleri">Site Giderleri</string>
    <string name="isleminiz_tamamlandi">İşleminiz Tamamlandı</string>
    <string name="check_account_info">Yöneticinizle iletişime geçip tekrar deneyiniz.</string>
    <string name="reject_message">Talebiniz Reddedildi</string>
    <string-array name="type_list">
        <item>Öneri</item>
        <item>Şikayet</item>
    </string-array>
    <string name="geçersiz">Geçersiz!</string>
    <string name="işleminizGerçekleştiriliyor">İşleminiz gerçekleştiriliyor…</string>
    <string name="eminMisiniz">"Hesabınızdan çıkış yapmak istediğinize emin misiniz?"</string>
    <string name="evet">Evet</string>
    <string name="hayır">Hayır</string>
    <string name="settings_info">Sitenizde kayıtlı olan hesap bilgilerinizi bu menüden güncelleyebilirsiniz.</string>
    <string name="hesap_ayarlar">Hesap Ayarları</string>
    <string name="ad_soyad">Ad-Soyad</string>
    <string name="batuhan_goren">Batuhan Gören</string>
    <string name="_90_555_333_12_08">+90 (555) 333 12 08</string>
    <string name="cep_telefonu">Cep Telefonu</string>
    <string name="batuhangoren_hotmail_com">batuhangoren@hotmail.com</string>
    <string name="sifre">Şifre</string>
    <string name="passwordStars">***********</string>
    <string name="settingsNameInfo">Yöneticinin sizi tanıyabilmesi için lütfen takma ad, lakap vb. takılar kullanmayınız.</string>
    <string name="guncelle">güncelle</string>
    <string name="settingsPhoneInfo">Lütfen kullanmakta olduğunuz telefon numaranızı giriniz.</string>
    <string name="settingsEmailInfo">Lütfen kullanmakta olduğunuz mail adresinizi giriniz.</string>
    <string name="settingsPasswordInfo">Lütfen şifrenizi belirlerken özel karakterler (.!/_) kullanmaya özen gösterin. Bu, hesabınızın üçüncü kişiler tarafından erişilmesine engel olacaktır.</string>
    <string name="mail_adresi">Mail Adresi</string>
    <string name="yeni_şifre">Yeni Şifre</string>
    <string name="sakinBlokNo">Blok: %s</string>
    <string name="sakinDaireNo">Daire: %d</string>
    <string name="sakinBorc">%d TL</string>
    <string name="sifreyi_yinele">Şifreyi yinele</string>
    <string name="eski_sifre">Eski şifre</string>
    <string name="tarih_seciniz">Tarih seçiniz</string>
    <string name="pending_info">Sitenizdeki askıda bekleyen sakinleri buradan görüntüleyebilirsiniz. Onaylanan sakinler siteye aidat bilgileriyle beraber otomatik olarak eklenir.</string>
    <string name="tumunu_onayla">Tümünü onayla</string>
    <string name="sakinOnayBekliyor">%s sakini onay için bekliyor.</string>
    <string name="waitingApprovalInfo">Sitenize kayıt olma talebinizi yöneticinize bildirdik. Bilgileriniz, yönetici tarafından doğrulandıktan sonra uygulamaya giriş yapabilirsiniz.</string>
    <string name="announcementInfo">Sitenizde bulunan sakinlere genel bir bilgilendirme, hatırlatma yapmak için duyuru paylaşabilirsiniz.</string>
    <string name="sakin_onaylanıyor">Sakin Onaylanıyor!</string>
    <string name="expendituresInfo">Sitenizde oluşan ekstra harcamaları gider olarak ekleyebilirsiniz. Sakinlerin bu gideri inceleyebilmeleri için fatura veya dekont ile belgelendirmeye özen gösteriniz.</string>
    <string name="incomingMessagesInfo">Yönetici tarafından sadece sizinle paylaşılan mesajlar burada listelenir.</string>
    <string name="notificationAdminInfo">Sakinler tarafından yapılan işlemlerin tümü burada listelenir.</string>
    <string name="notificationResidentInfo">Yönetici tarafından yapılan işlemlerin tümü burada bildirim olarak listelenir.</string>
    <string name="siteExpendituresInfo">Site içerisinde yer alan ekstra harcama ve giderleri buradan dekont veya faturasıyla beraber inceleyebilirsiniz.</string>
    <string name="voteResidentInfo">Site içerisinde alınacak kararları belirlemek için açılan oylamalar burada listelenir. Yalnızca yönetici tarafından belirlenen süre içerisinde oy kullanabilirsiniz. Her sakinin sadece bir oy kullanma hakkı olduğunu unutmayınız.</string>
    <string name="line">-</string>
    <string name="referans">Referans</string>
    <string name="referenceFirstText">Bu uygulamada kullanılan animasyonlu ikonlar <b>Freepik</b> tarafından</string>
    <string name="referenceSecondText"><b>www.flaticon.com</b> üzerinden alınmıştır.</string>
    <string name="referenceThirdText">Sakin tarafında açılan onay bekleme sayfasında kullanılan animasyonlu ikon <b>https://icons8.com</b> adresi üzerinden alınmıştır.</string>
    <string name="borc_adi">Borç Adı</string>
</resources>