<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="@string/notification"
            android:id="@+id/notificationResidentFragment"
            android:icon="@drawable/notification_icon"/>
        <item android:title="@string/gelen_mesajlar"
            android:id="@+id/incomingMessagesResidentFragment"
            android:icon="@drawable/message_icon"/>
        <item android:title="@string/site_giderleri"
            android:id="@+id/siteExpendituresResidentFragment"
            android:icon="@drawable/credit_card_green_icon"/>
        <item android:title="@string/services"
            android:id="@+id/servicesResidentFragment"
            android:icon="@drawable/service_phone_icon"/>
        <item android:title="@string/oylama_sonuclar"
            android:id="@+id/votingResultsResidentFragment"
            android:icon="@drawable/assessment_icon"/>
        <item android:title="@string/meeting"
            android:id="@+id/meetingsResidentFragment"
            android:icon="@drawable/videocam_icon"/>

        <item android:title="@string/account">
            <menu>
                <group android:checkableBehavior="single">
                    <item android:title="@string/setting"
                        android:id="@+id/settingsResidentFragment"
                        android:icon="@drawable/ic_outline_settings_24"/>
                    <item android:title="@string/log_out"
                        android:icon="@drawable/logout_icon"/>
                </group>
            </menu>
        </item>

    </group>
</menu>