<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.graduationproject.grad_project.viewmodel.HomePageAdminViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:id="@+id/drawerLayoutAdmin"
        android:background="@color/primary_color">

        <TextView
            android:id="@+id/headerAccountName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/account_name"
            android:text="@{viewModel.userName}"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/secondary_color"
            android:textColorHint="@color/secondary_color"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/signOut"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="bottom"

            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/logout_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/headerAccountType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/account_type"
            android:text="@string/yönetici"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/secondary_color"
            android:textColorHint="@color/secondary_color"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerAccountName" />

        <TextView
            android:id="@+id/headerSiteName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="13dp"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/site_name"
            android:text="@{viewModel.siteName}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/secondary_color"
            android:textColorHint="@color/secondary_color"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerAccountType" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>