<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="expenditure"
            type="com.graduationproject.grad_project.model.Expenditure" />
    </data>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/recycleview_background"
        android:layout_marginBottom="15dp">

        <LinearLayout
            android:id="@+id/account_info_linearLayout"
            android:layout_width="230dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/expenditures_type_textView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/gider_tipi"
                android:paddingTop="4dp"
                android:textSize="22sp"
                android:lines="1"
                android:text="@{expenditure.title}"
                android:textColor="@color/primary_color"
                android:textColorHint="@color/primary_color"
                android:fontFamily="@font/titillium_web_bold"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"/>

            <TextView
                android:id="@+id/expenditures_content_text"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:fontFamily="@font/titillium_web"
                android:hint="@string/content"
                android:text="@{expenditure.content}"
                android:lines="2"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:textColor="@color/primary_color"
                android:textColorHint="@color/primary_color"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/expenditures_date_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/titillium_web"
                android:gravity="center_vertical"
                android:hint="@string/tarih"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:lines="1"
                android:text="@{String.valueOf(expenditure.date.toDate())}"
                android:textColor="@color/primary_color"
                android:textColorHint="@color/primary_color"
                android:textSize="12sp"
                tools:ignore="TouchTargetSizeCheck" />



        </LinearLayout>

        <TextView
            android:id="@+id/expenditures_amount_text"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:hint="@string/line"
            android:textColorHint="@color/primary_color"
            android:textColor="@color/primary_color"
            android:text="@{String.valueOf(expenditure.amount)}"
            android:fontFamily="@font/titillium_web_bold"
            android:textSize="17sp"
            android:paddingTop="10dp"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/expenditures_more_icon_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/more_horiz"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/todo"/>

    </LinearLayout>


</layout>